# habitly

./: .gitignore  CMakeLists.txt  PasswordUtil.h  README.md  SessionManager.h  databasemanager.cpp  databasemanager.h  habit_engine.cpp  habit_engine.h  habitcard.cpp  habitcard.h  habitrepository.cpp  habitrepository.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  secondwindow.cpp  secondwindow.h  secondwindow.ui  secondwindow.ui.autosave  setupwindow.cpp  setupwindow.h  setupwindow.ui  signupscreen.cpp  signupscreen.h  signupscreen.ui
.qtcreator/: build.ninja  qtcsettings.cmake
.qtcreator/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtcreator/.qtc_clangd/: compile_commands.json
.qtcreator/.qtc_clangd/.cache/clangd/index/: QDebug.A6013BF1AAF7F779.idx  QHeaderView.B6B761BCAD94E44F.idx  habit_engine.cpp.0F005A65EF79CC77.idx  habit_engine.h.FCAAA6D8F8BE3E61.idx  main.cpp.458C0765A88B9553.idx  mainwindow.cpp.824B3A43BFCBCB8D.idx  mainwindow.h.6B4CDF06C94C306D.idx  qabstractitemdelegate.h.3C502411C7017EEE.idx  qabstractitemmodel.h.1CA97DF65D742655.idx  qabstractitemview.h.A3A1C882138F675D.idx  qabstractscrollarea.h.099C9C2176AB8928.idx  qabstractslider.h.D063B1159CB403BB.idx  qabstractspinbox.h.D4E77D368D19D71B.idx  qcheckedint_impl.h.DA55C22000C479E0.idx  qcomparehelpers.h.D2492DAF1F6FE3B3.idx  qcontiguouscache.h.E12BB5FE65B2C30A.idx  qcoreapplication.h.F4F64978C1742F9E.idx  qdeadlinetimer.h.0090F31C5BD83298.idx  qdebug.h.42D4A7C4FD9EA3A0.idx  qdialogbuttonbox.h.0BBA2D0E2B284F30.idx  qendian.h.80348B976ACEA00C.idx  qflags.h.211E40388DE0EC6F.idx  qframe.h.EF66E7627E112F43.idx  qhash.h.1C457825B736C637.idx  qheaderview.h.CBDF753EB35BB8D7.idx  qitemselectionmodel.h.4B319B95887D3406.idx  qiterator.h.D76533F112CA3FCA.idx  qlist.h.EF74245CE85755EC.idx  qmap.h.6E67A7FE4F84B5E8.idx  qmessagebox.h.2B68A74FAB064D3E.idx  qmetatype.h.394736DC9CED34B4.idx  qnativeinterface.h.CC8688F2FFB1585A.idx  qobject.h.8CEF2A68CA1CFA50.idx  qobjectdefs.h.96D53E1D21E4D6A6.idx  qregularexpression.h.C6382136D75439B5.idx  qrubberband.h.DF7AA325FFCB6828.idx  qshareddata.h.BD31744D60DAEAE5.idx  qsharedpointer_impl.h.71727BE1693704E1.idx  qslider.h.74571191023C098E.idx  qspan.h.9F7FF37F2059FBAD.idx  (+10 more)
